trying to fix media spotlight spacing and font size

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -66,9 +66,9 @@
   color: #424242;
 }
 
-.media-spotlight-header::after {
+/* .media-spotlight-header::after {
   content: "Media Spotlight:"
-}
+} */
 
 .media-spotlight-header + a {
   border-bottom: 2px solid;
@@ -128,6 +128,10 @@
 
 .circle-list {
   list-style-type: disc;
+}
+
+h3, .h3 {
+  font-family: "Gudea";
 }
 
 * {
